--- a/404.html
+++ b/404.html
@@ -19,12 +19,12 @@
         }
         navigator.serviceWorker.register(sw, {scope: scope}).then(res => {
             console.log('ServiceWorker Init');
-            if (location.href.indexOf('/_asset/') === -1) {
+            if (location.href.indexOf('/site_asset/') === -1) {
                 reload();
             } else {
                 let err = document.createElement('h1');
                 err.innerText = '404 Not Found';
-                document.append(err);
+                document.body.append(err);
             }
         }).catch(err => {
             console.log('ServiceWorker Failed')
